improve code + fixed error with security dependency